added traces